# Circa-backend

./: .gitignore  Cargo.toml  README.md  data.db  seed.sql
docs/: ROLES.md
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/models/: mod.rs
src/modules/auth/: middleware.rs  mod.rs  models.rs  routes.rs  service.rs
src/modules/user/: entity.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
tests/: error_test.rs  tests.rs
tests/auth/: mod.rs  routes_test.rs  service_test.rs
tests/user/: mod.rs  models_test.rs  routes_test.rs  service_test.rs
