[package]
name = "circa_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
derive_more = { version = "2.1.1", features = ["display"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
