[package]
name = "circa_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
derive_more = { version = "2.1.1", features = ["display"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.21.0", features = ["v7"] }
jsonwebtoken = "9.3"
actix-web-httpauth = "0.8"

[dev-dependencies]
sea-orm = { version = "1.0", features = ["mock"] }
